<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:padding="10dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/goal_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/home_yellow"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.3"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/goalers"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yelow_cards"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorPrimaryDark"
                />

            <TextView
                android:id="@+id/away_yellow"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.3"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/goalers"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/goal_content">

            <TextView
                android:id="@+id/home_red"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/goalers"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/red"
                app:layout_constraintWidth_percent="0.3" />

            <TextView
                android:id="@+id/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorPrimaryDark"
                />

            <TextView
                android:id="@+id/away_red"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/goalers"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/red"
                app:layout_constraintWidth_percent="0.3"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>