<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/keeper_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/home_kepper"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.3"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/goalers"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/keeper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keppers"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/away_keeper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/goalers"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/defence_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/keeper_content">

            <TextView
                android:id="@+id/home_def"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.3"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/goalers"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/defence" />

            <TextView
                android:id="@+id/defence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defense"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/away_def"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/goalers"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/defence"
                app:layout_constraintWidth_percent="0.3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mid_field_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/defence_content">

            <TextView
                android:id="@+id/home_mid"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.3"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/goalers"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/mid_field" />

            <TextView
                android:id="@+id/mid_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/midfield"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/away_mid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/goalers"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/mid_field"
                app:layout_constraintWidth_percent="0.3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/forward_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/mid_field_content">

            <TextView
                android:id="@+id/home_forward"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.3"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/goalers"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/forward" />

            <TextView
                android:id="@+id/forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forward"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/away_forward"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/goalers"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/forward"
                app:layout_constraintWidth_percent="0.3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/substitutes_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/forward_content">

            <TextView
                android:id="@+id/home_substitutes"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.3"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/goalers"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/substitutes" />

            <TextView
                android:id="@+id/substitutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/substitutes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/away_substitutes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/goalers"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/substitutes"
                app:layout_constraintWidth_percent="0.3" />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>